WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257444
aria-checked doesn't work for role="treeitem" elements with display:contents
https://bugs.webkit.org/show_bug.cgi?id=257444
Summary
aria-checked doesn't work for role="treeitem" elements with display:contents
Tyler Wilcock
Reported
2023-05-28 18:16:23 PDT
...
Attachments
Patch
(64.68 KB, patch)
2023-05-28 18:23 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(65.19 KB, patch)
2023-05-28 19:36 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-28 18:16:35 PDT
<
rdar://problem/109955788
>
Tyler Wilcock
Comment 2
2023-05-28 18:23:53 PDT
Created
attachment 466527
[details]
Patch
Tyler Wilcock
Comment 3
2023-05-28 19:36:58 PDT
Created
attachment 466528
[details]
Patch
EWS
Comment 4
2023-05-31 16:05:55 PDT
Committed
264761@main
(2860da7a0ce4): <
https://commits.webkit.org/264761@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466528
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug