aria-checked doesn't work for role="treeitem" elements with display:contents https://bugs.webkit.org/show_bug.cgi?id=257444 rdar://problem/109955788

Reviewed by Chris Fleizach.

After this patch, we properly create role="tree" and role="treeitem"
elements as AccessibilityTree and AccessibilityTreeItem rather than a
generic AccessibilityNodeObject, fixing aria-checked and other
functionality in these subclasses.

Testcase accessibility/display-contents/tree-and-treeitems.html added.

The other major change in this patch is the creation of a new
accessibility/display-contents subfolder as requested in a review comment
for a previous patch. All display:contents related tests are moved into
this folder.

* LayoutTests/accessibility/aria-hidden-display-contents-element.html: Removed.
* LayoutTests/accessibility/display-contents-dynamically-added-children.html: Removed.
* LayoutTests/accessibility/display-contents-search-traversal.html: Removed.
* LayoutTests/accessibility/display-contents/aria-hidden-expected.txt: Renamed from LayoutTests/accessibility/aria-hidden-display-contents-element-expected.txt.
* LayoutTests/accessibility/display-contents/aria-hidden.html: Added.
* LayoutTests/accessibility/display-contents/aria-owns-expected.txt: Renamed from LayoutTests/accessibility/display-contents-aria-owns-expected.txt.
* LayoutTests/accessibility/display-contents/aria-owns.html: Renamed from LayoutTests/accessibility/display-contents-aria-owns.html.
* LayoutTests/accessibility/display-contents/descendant-menu-item-expected.txt: Renamed from LayoutTests/accessibility/display-contents-descendant-menu-item-expected.txt.
* LayoutTests/accessibility/display-contents/descendant-menu-item.html: Renamed from LayoutTests/accessibility/display-contents-descendant-menu-item.html.
* LayoutTests/accessibility/display-contents/dynamically-added-children-expected.txt: Renamed from LayoutTests/accessibility/display-contents-dynamically-added-children-expected.txt.
* LayoutTests/accessibility/display-contents/dynamically-added-children.html: Added.
* LayoutTests/accessibility/display-contents/element-roles-expected.txt: Renamed from LayoutTests/accessibility/display-contents-element-roles-expected.txt.
* LayoutTests/accessibility/display-contents/element-roles.html: Renamed from LayoutTests/accessibility/display-contents-element-roles.html.
* LayoutTests/accessibility/display-contents/list-expected.txt: Renamed from LayoutTests/accessibility/display-contents-list-expected.txt.
* LayoutTests/accessibility/display-contents/list.html: Renamed from LayoutTests/accessibility/display-contents-list.html.
* LayoutTests/accessibility/display-contents/object-ordering-expected.txt: Renamed from LayoutTests/accessibility/display-contents-object-ordering-expected.txt.
* LayoutTests/accessibility/display-contents/object-ordering.html: Renamed from LayoutTests/accessibility/display-contents-object-ordering.html.
* LayoutTests/accessibility/display-contents/search-traversal-expected.txt: Renamed from LayoutTests/accessibility/display-contents-search-traversal-expected.txt.
* LayoutTests/accessibility/display-contents/search-traversal.html: Added.
* LayoutTests/accessibility/display-contents/text-under-element-expected.txt: Renamed from LayoutTests/accessibility/text-under-display-contents-element-expected.txt.
* LayoutTests/accessibility/display-contents/text-under-element.html: Added.
* LayoutTests/accessibility/display-contents/tree-and-treeitems-expected.txt: Added.
* LayoutTests/accessibility/display-contents/tree-and-treeitems.html: Added.
* LayoutTests/accessibility/text-under-display-contents-element.html: Removed.
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/glib/accessibility/display-contents/aria-hidden-expected.txt: Renamed from LayoutTests/platform/glib/accessibility/aria-hidden-display-contents-element-expected.txt.
* LayoutTests/platform/glib/accessibility/display-contents/aria-owns-expected.txt: Renamed from LayoutTests/platform/glib/accessibility/display-contents-aria-owns-expected.txt.
* LayoutTests/platform/glib/accessibility/display-contents/element-roles-expected.txt: Renamed from LayoutTests/platform/glib/accessibility/display-contents-element-roles-expected.txt.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/accessibility/display-contents/aria-hidden-expected.txt: Renamed from LayoutTests/platform/ios/accessibility/aria-hidden-display-contents-element-expected.txt.
* LayoutTests/platform/ios/accessibility/display-contents/dynamically-added-children-expected.txt: Renamed from LayoutTests/platform/ios/accessibility/display-contents-dynamically-added-children-expected.txt.
* LayoutTests/platform/ios/accessibility/display-contents/element-roles-expected.txt: Renamed from LayoutTests/platform/ios/accessibility/display-contents-element-roles-expected.txt.
* LayoutTests/platform/ios/accessibility/display-contents/object-ordering-expected.txt: Renamed from LayoutTests/platform/ios/accessibility/display-contents-object-ordering-expected.txt.
* LayoutTests/platform/ios/accessibility/display-contents/search-traversal-expected.txt: Renamed from LayoutTests/platform/ios/accessibility/display-contents-search-traversal-expected.txt.
* LayoutTests/platform/ios/accessibility/display-contents/text-under-element-expected.txt: Renamed from LayoutTests/platform/ios/accessibility/text-under-display-contents-element-expected.txt.
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::isAccessibilityTree):
(WebCore::isAccessibilityTreeItem):
(WebCore::AXObjectCache::createObjectFromRenderer):
(WebCore::createFromNode):
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):
* Source/WebCore/accessibility/AccessibilityTree.cpp:
(WebCore::AccessibilityTree::AccessibilityTree):
(WebCore::AccessibilityTree::create):
* Source/WebCore/accessibility/AccessibilityTree.h:
* Source/WebCore/accessibility/AccessibilityTreeItem.cpp:
(WebCore::AccessibilityTreeItem::AccessibilityTreeItem):
(WebCore::AccessibilityTreeItem::create):
(WebCore::AccessibilityTreeItem::determineAccessibilityRole):
* Source/WebCore/accessibility/AccessibilityTreeItem.h:

Canonical link: https://commits.webkit.org/264761@main